5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1575_2897.log
== TEST (2019-03-13 13:02:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:02:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.143738
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:03:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:03:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.14007
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:03:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("2")

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:03:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int("2")

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.273963
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:04:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:04:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.131573
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:04:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:04:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print("4")
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:04:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:2"))

# Impressao do dobro do numero
print("4")
-- EXECUTION TIME:
0.153571
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:04:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =(input("Digite o numero:2"))

# Impressao do dobro do numero
print("4")
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:04:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =(input("Digite o numero:2"))

# Impressao do dobro do numero
print("4")
-- EXECUTION TIME:
0.162374
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("2"))

# Impressao do dobro do numero
print("4")
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:05:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("2"))

# Impressao do dobro do numero
print("4")
-- EXECUTION TIME:
0.139745
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:05:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("2"))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:05:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num =int(input("2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.177852
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:06:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.143646
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:07:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"2"))

# Impressao do dobro do numero
print(4)
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"2"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:07:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.192596
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 4
    num = int(input(Digite o numero:"2"))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:07:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.185996
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 4
    num = int(input(Digite o numero:"2"))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:08:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:08:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.171213
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:10:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:10:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.207988
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
